fixed pagination gap styling

--- a/app/assets/stylesheets/diaedu/pagination.css.scss
+++ b/app/assets/stylesheets/diaedu/pagination.css.scss
@@ -35,7 +35,7 @@ div.pagination {
         background-color: #E4EDEF;
       }
 
-      &.gap:hover {
+      &.skip:hover {
         background-color: inherit;
       }
     }
